<resources>
  <string name="app_name">Sights Locator</string>
  <string name="application_logo_content_description">Showing application logo while loading application</string>
  <string name="showing_loading_icon">Showing loading icon</string>
  <string name="image_list_description">View list of sights</string>
  <string name="menu_exit">Exit</string>
  <string name="menu_sight">Sight Info</string>
  <string name="menu_list">Sight List</string>
  <string name="menu_maps">Sight Location</string>
  <string name="menu_about">About Application</string>
  <string name="developer_info">Developer: Sanjin Kurelić</string>
  <string name="developer_web">www.sanjin.eu</string>
  <string name="app_version">Version: 2021.1.0</string>
  <string name="delete_icon">Delete icon</string>
  <string name="sight_image_description">Image of the sight</string>
  <string name="more_info_button">Click for more info…</string>
</resources>