<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/fragments"
  app:startDestination="@id/list">

  <fragment
    android:id="@+id/sight"
    android:name="eu.sanjin.sightslocator.item.ItemFragment"
    android:label="@string/menu_sight"
    tools:layout="@layout/fragment_item" />

  <fragment
    android:id="@+id/list"
    android:name="eu.sanjin.sightslocator.list.ListFragment"
    android:label="@string/menu_list"
    tools:layout="@layout/fragment_list" />

  <fragment
    android:id="@+id/maps"
    android:name="eu.sanjin.sightslocator.map.MapFragment"
    android:label="@string/menu_maps"
    tools:layout="@layout/fragment_map" />

  <fragment
    android:id="@+id/about"
    android:name="eu.sanjin.sightslocator.about.AboutFragment"
    android:label="@string/menu_about"
    tools:layout="@layout/fragment_about" />

</navigation>