<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:layout_marginBottom="@dimen/navigation_menu_height">

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
    android:contentDescription="@string/application_logo_content_description"
    android:src="@drawable/app_logo" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/app_name"
    android:textColor="@color/primary"
    android:layout_marginTop="@dimen/medium_margin"
    android:textSize="@dimen/huge_text" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:layout_marginTop="@dimen/medium_margin"
    android:text="@string/developer_info"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:autoLink="web"
    android:textAlignment="center"
    android:layout_marginTop="@dimen/small_margin"
    android:text="@string/developer_web"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:layout_marginTop="@dimen/small_margin"
    android:text="@string/app_version"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>