<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".intro.SplashScreenActivity">

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/no_image"
    android:contentDescription="@string/application_logo_content_description" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textSize="40sp"
    android:text="@string/app_name" />

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:contentDescription="@string/showing_loading_icon"
    android:id="@+id/splash_screen_loading_icon"
    android:src="@drawable/splash_screen_loading" />

</LinearLayout>